# Recipe-Generator-Client

./: .dockerignore  .env.template  Dockerfile  README.md  pyproject.toml
src/: api_client.py  config.py  handlers.py  main.py
src/services/: available_llm_service.py  recipe_service.py
